initial fireflies simulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,9 @@ add_subdirectory(engine)
 #                        Engine Test (Sandbox)                      #
 # ################################################################# #
 add_subdirectory(sandbox)
+
+# ################################################################# #
+#                            Projects                               #
+# ################################################################# #
+
+add_subdirectory(fireflies)                 # fireflies
