set up n-bodies project

--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -1,2 +1,5 @@
 # firefly simulation with compute shader
-add_subdirectory(fireflies_cs)
+add_subdirectory(fireflies)
+
+# n-body-problem with compute shader
+add_subdirectory(n_bodies)
